spade-tests/src/snapshots/spade_tests__parser__good_eof_error_on_missing_function_body.snap
---
source: spade-tests/src/parser.rs
---
fn a() -> bool

error: Unexpected `end of file`, expected body or `__builtin__`
  ┌─ testinput:1:15
  │
1 │ fn a() -> bool
  │ --------------^ Unexpected end of file
  │ │             
  │ Expected body for this fn


